# LibroDeConocimiento

./: .CMakeLists.txt  .CMakeLists_generated_Makefile  .gitignore  CMakeLists.txt  Makefile  README.md
References/: Bash.txt  C#.txt  C++.txt  Features.txt  Golang.txt  Makefile  NonDivisibleSubset_Input.txt  Python.txt  SQL.txt
References/ForCommit/: OrganizingContainers.txt  QueensAttack.txt  VisibleNodes.txt
References/ForCommit/SameSumSubMatrices/: Makefile  README.md
References/ForCommit/SameSumSubMatrices/MatrixFiles/: matrix2.txt
References/ForCommit/SameSumSubMatrices/src/: FileHandler.cpp  MagicSquareFinder.hpp  MatrixData.hpp  main.cpp
References/HexagonalString/: BfsAlgorithm.cpp  BfsAlgorithm.hpp  Grid.hpp  InputOutputHandler.hpp  RandomStringGenerator.py  RecursiveAlgorithm.cpp  RecursiveAlgorithm.hpp  main.cpp
References/HexagonalString/Callgrind/: callgrind.out.4714  callgrind.out.4746
References/SameSumSubMatrices/src/: FileHandler.hpp  MagicSquareFinder.cpp  MatrixOutputter.cpp  MatrixOutputter.hpp
src/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  IController.hpp  main.cpp
src/Algorithms/: AlgorithmsController.cpp  AlgorithmsController.hpp  AlgorithmsGetter.cpp  AlgorithmsGetter.hpp  CMakeLists.txt  IAlgorithm.hpp
src/Algorithms/Graph/: Bfs.cpp  Bfs.hpp
src/Challenges/: CMakeLists.txt  ChallengesController.cpp  ChallengesController.hpp  ChallengesGetter.cpp  ChallengesGetter.hpp  IChallenge.hpp
src/Challenges/CoderByte/EasyDifficulty/: CorrectPath.cpp  CorrectPath.hpp  FirstFactorial.cpp  FirstFactorial.hpp  FirstReverse.cpp  FirstReverse.hpp  LetterCapitalize.cpp  LetterCapitalize.hpp  LetterChanges.cpp  LetterChanges.hpp  LongestWord.cpp  LongestWord.hpp  SimpleAdding.cpp  SimpleAdding.hpp  SimpleSymbols.cpp  SimpleSymbols.hpp
src/Challenges/CoderByte/HardDifficulty/: ChessboardTraveling.cpp  ChessboardTraveling.hpp  KaprekarsConstant.cpp  KaprekarsConstant.hpp  MaximalSquare.cpp  MaximalSquare.hpp
src/Challenges/CoderByte/MediumDifficulty/: EightQueens.cpp  EightQueens.hpp
src/Challenges/HackerRank/: ClimbingTheLeaderboard.cpp  ClimbingTheLeaderboard.hpp  MagicSquare.cpp  MagicSquare.hpp  NonDivisibleSubset.cpp  NonDivisibleSubset.hpp  OrganizingContainers.cpp  OrganizingContainers.hpp  QueensAttack.cpp  QueensAttack.hpp
src/Challenges/ProjectEuler/: EvenFibonacciNumbers.cpp  EvenFibonacciNumbers.hpp  LargestPalindromeProduct.cpp  LargestPalindromeProduct.hpp  LargestPrimeFactor.cpp  LargestPrimeFactor.hpp  LargestProductInASeries.cpp  LargestProductInASeries.hpp  MultiplesOf3And5.cpp  MultiplesOf3And5.hpp  SmallestMultiple.cpp  SmallestMultiple.hpp
src/Challenges/Self/: WordPermutations.cpp  WordPermutations.hpp
src/CoderByte/: CMakeLists.txt  CoderByteController.cpp  CoderByteController.hpp
src/CoderByte/Challenges/: ChallengesGetter.cpp  ChallengesGetter.hpp  IChallenge.hpp
src/CoderByte/Challenges/EasyDifficulty/: FirstFactorial.cpp  FirstFactorial.hpp  FirstReverse.cpp  FirstReverse.hpp  LetterCapitalize.cpp  LetterCapitalize.hpp  LetterChanges.cpp  LetterChanges.hpp  LongestWord.cpp  LongestWord.hpp  SimpleAdding.cpp  SimpleAdding.hpp  SimpleSymbols.cpp  SimpleSymbols.hpp
src/Common/: CMakeLists.txt  DataTypeHandler.hpp  Logger.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ResultHandler.hpp  SafeExecution.hpp  ThreadSpawner.hpp  UserInputHandler.hpp
src/Common/File/: FileHandler.cpp  FileHandler.hpp
src/Help/: CMakeLists.txt  HelpController.cpp  HelpController.hpp
src/Utilities/: Logger.hpp  UserInputHandler.hpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/Challenges/: CMakeLists.txt
test/Challenges/CoderByte/EasyDifficulty/: FirstFactorialTest.cpp  FirstReverseTest.cpp  LetterCapitalizeTest.cpp  LongestWordTest.cpp
test/Challenges/CoderByte/HardDifficulty/: ChessboardTravelingTest.cpp  KaprekarsConstantTest.cpp
test/Challenges/ProjectEuler/: LargestPrimeFactorTest.cpp
test/CoderByte/: CMakeLists.txt
test/CoderByte/Challenges/EasyDifficulty/: FirstFactorialTest.cpp  FirstReverseTest.cpp
